--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "username",
-      "password": "root",
+      "password": "password",
       "database": "people",
       "host": "127.0.0.1",
       "dialect": "postgres"
